PLT-7749 - Fixing word wrap in list elements

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -943,10 +943,6 @@
 
     .post--edited {
         // If the last paragraph of an edited post is a paragraph, make it inline-block so that the (edited) indicator can be on the same line as it
-        .post-message__text {
-            word-break: break-all;
-        }
-
         .post-message__text > p:last-child {
             display: inline-block;
             width: auto;
